feat: complete project start

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,11 @@
     "@angular/platform-browser": "18.2.0",
     "@angular/platform-browser-dynamic": "18.2.0",
     "@angular/router": "18.2.0",
+    "@types/d3": "^7.4.3",
+    "@types/d3-sankey": "^0.12.4",
+    "d3": "^7.9.0",
+    "d3-dsv": "^3.0.1",
+    "d3-sankey": "^0.12.3",
     "rxjs": "7.8.1",
     "socket.io-client": "4.7.5",
     "tslib": "2.4.0",
@@ -33,6 +38,7 @@
     "@angular-eslint/template-parser": "18.2.0",
     "@angular/cli": "18.2.1",
     "@angular/compiler-cli": "18.2.0",
+    "@types/d3-dsv": "^3.0.7",
     "@types/jasmine": "4.3.5",
     "@types/node": "20.4.8",
     "@typescript-eslint/eslint-plugin": "7.17.0",
