--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "d3": "^7.9.0",
     "d3-dsv": "^3.0.1",
     "d3-sankey": "^0.12.3",
+    "d3-simple-slider": "^2.0.0",
     "rxjs": "7.8.1",
     "socket.io-client": "4.7.5",
     "tslib": "2.4.0",
@@ -39,6 +40,7 @@
     "@angular/cli": "18.2.1",
     "@angular/compiler-cli": "18.2.0",
     "@types/d3-dsv": "^3.0.7",
+    "@types/d3-simple-slider": "^1.5.6",
     "@types/jasmine": "4.3.5",
     "@types/node": "20.4.8",
     "@typescript-eslint/eslint-plugin": "7.17.0",
