--- a/client/angular.json
+++ b/client/angular.json
@@ -28,7 +28,10 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "src/sitemap.xml",
+              "src/404.html"
             ],
             "styles": [
               "src/styles.scss"
