--- a/client/angular.json
+++ b/client/angular.json
@@ -31,6 +31,8 @@
               "src/assets",
               "src/robots.txt",
               "src/sitemap.xml",
+              "src/sitemapindex.xml",
+              "src/web.config",
               "src/404.html"
             ],
             "styles": [
